--- a/THS.Models/THS.Models.csproj
+++ b/THS.Models/THS.Models.csproj
@@ -103,6 +103,21 @@
     <Compile Include="CUD_NienKhoa_Result.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="db_TEstmode.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>db_TEstmode.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="db_TEstmode.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>db_TEstmode.tt</DependentUpon>
+    </Compile>
+    <Compile Include="db_TEstmode.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>db_TEstmode.edmx</DependentUpon>
+    </Compile>
     <Compile Include="DeTaiLV.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -117,6 +132,9 @@
     </Compile>
     <Compile Include="GetByID_Result.cs">
       <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="GetData_Result.cs">
+      <DependentUpon>db_TEstmode.tt</DependentUpon>
     </Compile>
     <Compile Include="GiangVien.cs">
       <DependentUpon>Model1.tt</DependentUpon>
@@ -167,6 +185,9 @@
     <Compile Include="PhanQuyen.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Role.cs">
+      <DependentUpon>db_TEstmode.tt</DependentUpon>
+    </Compile>
     <Compile Include="SearchGiangVien_Result.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -185,16 +206,36 @@
     <Compile Include="Tcode.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="User.cs">
+      <DependentUpon>db_TEstmode.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config">
       <SubType>Designer</SubType>
+    </None>
+    <EntityDeploy Include="db_TEstmode.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>db_TEstmode.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="db_TEstmode.edmx.diagram">
+      <DependentUpon>db_TEstmode.edmx</DependentUpon>
     </None>
     <None Include="Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="db_TEstmode.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>db_TEstmode.edmx</DependentUpon>
+      <LastGenOutput>db_TEstmode.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="db_TEstmode.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>db_TEstmode.edmx</DependentUpon>
+      <LastGenOutput>db_TEstmode.cs</LastGenOutput>
+    </Content>
     <Content Include="Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Model1.edmx</DependentUpon>
